fixed recommendations block grid; whitespace fixing

--- a/css/product-page.css
+++ b/css/product-page.css
@@ -15,10 +15,10 @@ body {
 }
 
 .header-logo {
-	width: 138px;
+  width: 138px;
   height: 10px;
   margin: 1rem auto;
-	object-fit: contain;
+  object-fit: contain;
 }
 
 @media (min-width: 48rem) {
@@ -50,7 +50,6 @@ body {
   .product-preview {
     margin: 0;
   }
-
   .product-preview-img {
     flex: none;
     width: 432px;
@@ -63,7 +62,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
-  
+
 .product-price {
   margin: 0;
   font-weight: 400;
@@ -72,7 +71,7 @@ body {
   color: #111111;
 }
 
-.product-code { 
+.product-code {
   margin: 0;
   font-size: 0.75rem;
   line-height: 1.6666666667;
@@ -89,20 +88,16 @@ body {
   .product-info {
     margin: 1.5rem 0;
   }
-
   .product-title {
     font-size: 1.5rem;
     margin: 1.5rem 0;
   }
-
-  .product-shortinfo { 
+  .product-shortinfo {
     margin: 0 0 1em;
   }
-
   .product-price {
     margin: 0;
   }
-
   .divider {
     border-bottom: none;
   }
@@ -111,7 +106,6 @@ body {
 .color {
   margin: 0;
   padding: 0 0 1rem;
-
   border-bottom: solid 1px #c6c6c6;
 }
 
@@ -137,9 +131,7 @@ body {
   width: 2.5rem;
   height: 2.5rem;
   margin-right: 1rem;
-
   font-size: 0;
-
   border: none;
   border-radius: 50%;
 }
@@ -165,14 +157,12 @@ body {
   width: 100%;
   margin: 2rem 0 1rem;
   padding: 1rem 0;
-
   font-size: 0.75rem;
   line-height: 1.1666666667;
   font-family: Raleway;
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
-
   background-color: #171717;
   border: solid 1px #171717;
   border-radius: 2px;
@@ -180,9 +170,7 @@ body {
 
 .product-button-black {
   margin: 0 0 1.375rem;
-
   color: #171717;
-
   background-color: #ffffff;
   border: solid 1px #999999;
   border-radius: 2px;
@@ -191,13 +179,11 @@ body {
 .product-button-help {
   margin: 0 0 2rem;
   padding: 0;
-
   font-size: 0.75rem;
   line-height: 1.3333333333;
   font-family: Raleway;
   color: #171717;
   text-transform: uppercase;
-
   background-color: #ffffff;
   border: none;
 }
@@ -206,7 +192,6 @@ body {
   .product-button {
     margin: 1rem 0 0;
   }
-
   .product-button-black {
     margin: 1rem 0 1.375rem;
   }
@@ -220,19 +205,15 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-
   font-family: Raleway;
   text-align: left;
-
   background: inherit;
   border: none;
 }
 
 .detail-title {
   position: relative;
-
   margin: 0;
-
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.25;
@@ -245,10 +226,8 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-
   width: 0.625rem;
   height: 1.25rem;
-
   background-image: url(../img/triangle.svg);
   background-repeat: no-repeat;
   background-position: center right;
@@ -262,7 +241,6 @@ body {
   .detail {
     margin: 0.5rem 0 1.5rem;
   }
-
   .detail-title::after {
     content: none;
   }
@@ -270,7 +248,6 @@ body {
 
 .description-text {
   margin: 2rem 0 0;
-
   font-size: 0.875rem;
   line-height: 1.7142857143;
   font-family: Lora;
@@ -284,7 +261,6 @@ body {
 .description-text ul {
   margin: 1.5rem 0 0;
   padding: 0;
-
   list-style: none;
 }
 
@@ -306,14 +282,12 @@ body {
 
 .shipping-message-title {
   margin: 0 0 0.25rem;
-
   font-size: 0.75rem;
   line-height: 1.1666666667;
 }
 
 .shipping-message-text {
   margin: 0;
-
   font-size: 0.75rem;
   line-height: 1.333333333;
 }
@@ -322,7 +296,6 @@ body {
   .shipping-img {
     display: block;
   }
-
   .shipping-message {
     display: block;
   }
@@ -336,22 +309,16 @@ body {
   display: inline-block;
   margin: 0 0 1.5rem;
   padding-bottom: 0.5rem;
-
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.25;
   color: #171717;
   text-transform: uppercase;
-
   border-bottom: solid 1px #171717;
 }
 
 .recommendations-link {
-  /* display: block;
-  flex-wrap: wrap; */
   margin: 0 0 2rem;
-
-
   color: #111111;
   text-decoration: none;
 }
@@ -362,13 +329,11 @@ body {
 }
 
 .recommendations-list {
-  display: flex;
   flex-wrap: wrap;
 }
 
 .recommendations-item-title {
   margin: 0.5rem 0;
-
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.25;
@@ -378,7 +343,6 @@ body {
 
 .recommendations-item-price {
   margin: 0;
-
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.1666666667;
@@ -389,7 +353,6 @@ body {
   .recommendations {
     padding: 0 0 2rem;
   }
-
   .misc-title {
     margin: 0 0 1.5rem;
   }
@@ -419,24 +382,19 @@ body {
 
 .footer {
   padding: 2rem 0;
-
   font-size: 0.75rem;
   line-height: 1.1666666667;
-
   background-color: #f3f3f3;
 }
 
 .footer-button {
   margin: 0;
   padding: 0 1.5rem 1rem 0;
-
   line-height: 1.333333333;
   font-family: Raleway;
   color: #999999;
-
   background: inherit;
   border: 0;
-
   display: block;
   text-align: left;
 }
@@ -453,7 +411,6 @@ body {
 
 .footer-help-title {
   margin: 0 0 1rem;
-
   font-weight: bold;
   font-size: 1rem;
   line-height: 1.25;
@@ -461,7 +418,6 @@ body {
 
 .footer-help-contacts {
   margin: 0;
-
   font-size: 0.875rem;
   line-height: 1.1428571429;
   font-family: Lora;
@@ -481,7 +437,6 @@ body {
 
 .footer-menu-title {
   margin: 0 0 1rem;
-
   font-size: 0.75rem;
   text-transform: uppercase;
 }
@@ -489,7 +444,6 @@ body {
 .footer-menu-link {
   display: block;
   margin: 0 0 0.75rem;
-
   font-size: 0.75rem;
   line-height: 1.33333333;
   color: #999999;
@@ -500,11 +454,9 @@ body {
   .footer-help {
     display: none;
   }
-
   .footer-menu {
     display: block;
   }
-
   .footer-settings {
     display: flex;
   }
